Refactor path project and modify categories-view

--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -168,6 +168,7 @@
     align-items: center;
     background: #fff;
     gap: 15px;
-    width: 80%;
+    width: 90%;
     text-align: center;
+    margin: 0% 4% 0% 4%;
 }
