--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -150,10 +150,11 @@
 }
 
 .book__card {
-    background: #ffffff;
-    border-radius: 1%;
+    background: hsl(0, 0%, 100%);
+    border-radius: 2rem;
     text-align: left;
     transition: transform 160ms ease, box-shadow 160ms ease;
+    padding-bottom: 2rem;
 }
 
 .book__card:hover {
@@ -182,8 +183,8 @@
 .card__image {
     width: 100%;
     height: 85%;
-    border-top-left-radius: 1%;
-    border-top-right-radius: 1%;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
     object-fit: cover;
     margin-bottom: 12px;
 }
