--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .header__nav {
   display: flex;
   text-align: bottom;
-  margin: 0.5%;
+  margin: 1% 3% 0.5% 0.5%;
   height: 5%;
   /* Antes .header__nav aplicaba al contenedor flex, 
      ahora el <ul> tiene la clase .header__menu para comportarse como flex container si es necesario,
@@ -42,13 +42,25 @@
     margin-top: -1%;
 }
 
-.header__icon-btn--profile {
-    padding-top: 1%;
-    margin-left: 30%;
-}
+.header__icon__search {
+    /* padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px; */
 
-.header__icon-btn--cart {
-    padding-top: 0.6%;
+    width: 20rem;
+    padding: 10px;
+    /* Importante: Dejar espacio a la izquierda para que el texto no tape la lupa */
+    padding-left: 40px; 
+    border-radius: 2rem;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    margin-left: 8%;
+
+    /* Configuración de la imagen de fondo */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z' fill='%23777'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: 10px center; /* Posición: 10px desde la izq, centrado vertical */
 }
 
 /* ===========================
