--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -22,7 +22,7 @@
     margin-bottom: 4%;
 }
 
-.info__subtitle{
+.info__subtitle {
     text-align: left;
     color: #666;
     font-size: 1.5rem;
@@ -133,7 +133,8 @@
 }
 
 .item__stars {
-    color: #F5C518; /* dorado */
+    color: #F5C518;
+    /* dorado */
     font-size: 1rem;
     line-height: 1;
     letter-spacing: 1px;
@@ -203,6 +204,14 @@
     margin-bottom: 2%;
 }
 
+.price__icon {
+    padding: 4% 6%;
+    background: #000;
+    color: #fafafa;
+    border-radius: 2rem;
+    margin-right: 3%;
+}
+
 .content__categories__email {
     display: flex;
     flex-direction: column;
@@ -211,12 +220,17 @@
     gap: 15px;
     width: 90%;
     text-align: center;
-    margin: 0% 2% 0% 2%;
+    margin: 0% 0% 0% 4%;
     padding: 2% 2% 2% 2%;
 }
 
 /* Responsive tweaks */
 @media (max-width: 900px) {
-    .content__submenu { display: none; }
-    .books__grid { grid-template-columns: repeat(2, 1fr); }
+    .content__submenu {
+        display: none;
+    }
+
+    .books__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
