--- a/src/styles/styleviewbook.css
+++ b/src/styles/styleviewbook.css
@@ -144,9 +144,9 @@
 .featured-books__button {
     margin-top: 10px;
     padding: 6px 12px;
-    background: #111;
+    background: #000000;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 2rem;
     cursor: pointer;
 }
 
